# Amplitude-Flutter

./: .gitignore  .metadata  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analysis_options.yaml  generate_test_coverage.sh  package-lock.json  package.json  pubspec.yaml  release.config.js
.github/ISSUE_TEMPLATE/: Bug_report.md  Question.md
.github/workflows/: android-ci.yml  ci.yml  jira-issue-create.yml  publish.yml  release.yml  semantic-pr.yml  swift-lint.yml
android/: build.gradle  gradle.properties  settings.gradle
darwin/: .gitignore  amplitude_flutter.podspec
darwin/Classes/: AmplitudeFlutterPlugin.h  AmplitudeFlutterPlugin.m  LifecycleDeduplicationPlugin.swift  (+1 more)
example/: .gitignore  .metadata  README.md  pubspec.yaml
ios/: .swiftlint.yml  amplitude_flutter.podspec
lib/: amplitude.dart  amplitude_mobile_stub.dart  amplitude_web.dart  configuration.dart  constants.dart  cookie_options.dart  default_tracking.dart  identify.dart  trackingOptions.dart  tracking_options.dart
macos/: amplitude_flutter.podspec
test/: amplitude_test.dart  amplitude_test.mocks.dart  configuration_test.dart  default_tracking_test.dart  tracking_options_test.dart
windows/: CMakeLists.txt  WINDOWS.md  amplitude_flutter_plugin.cpp  amplitude_flutter_plugin.h  amplitude_flutter_plugin_c_api.cpp  amplitude_instance.cpp  amplitude_instance.h  device_info.cpp  device_info.h  event_queue.cpp  event_queue.h  http_transport.cpp  http_transport.h  storage.cpp  storage.h  string_utils.h  uuid.h
windows/include/amplitude_flutter/: amplitude_flutter_plugin_c_api.h
(+116 files in other folders)
